add_subdirectory (Foundation)
add_subdirectory (JSON)
add_subdirectory (Net)
if (OS_LINUX OR OS_DARWIN)
    add_subdirectory (Crypto)
    add_subdirectory (NetSSL_OpenSSL)
elseif (OS_WINDOWS)
    if (MSVC)
        if (TARGET Foundation)
            set_property(TARGET Foundation APPEND PROPERTY INTERFACE_LINK_LIBRARIES Iphlpapi)
        elseif (TARGET Poco::Foundation)
            set_property(TARGET _poco_foundation APPEND PROPERTY INTERFACE_LINK_LIBRARIES Iphlpapi)
        endif ()
    endif ()
    add_subdirectory (NetSSL_Win)
endif()
add_subdirectory (Util)
