include(cmake/PocoMacros.cmake)

add_subdirectory(Foundation)
add_subdirectory(Util)
add_subdirectory(Net)
if (ENABLE_SSL)
    add_subdirectory(Crypto)
    add_subdirectory(NetSSL_OpenSSL)
    add_library(Poco::Net::SSL ALIAS NetSSL)
elseif (OS_WINDOWS)
    add_subdirectory(NetSSL_Win)
    add_library(Poco::Net::WinSSL ALIAS NetSSLWin)
endif()
