set(ZSTD_BUILD_PROGRAMS OFF CACHE BOOL "" FORCE)
set(ZLIB_BUILD_TESTING OFF CACHE BOOL "" FORCE)
set(ZLIB_BUILD_SHARED  OFF CACHE BOOL "" FORCE)
set(ZLIB_BUILD_STATIC  ON  CACHE BOOL "" FORCE)
set(ZLIB_BUILD_MINIZIP OFF CACHE BOOL "" FORCE)
set(ZLIB_INSTALL       OFF CACHE BOOL "" FORCE)
set(ZLIB_PREFIX        OFF CACHE BOOL "" FORCE)

add_subdirectory(../zstd/build/cmake ${CMAKE_CURRENT_BINARY_DIR}/contrib/zstd/)
